# cafe-notification-daemon

./: .build.yml  .travis.yml  AUTHORS  Makefile.am  NEWS  README  autogen.sh  cafe-notification-daemon-dbgsym_2.0.0-1_amd64.deb  cafe-notification-daemon.pot  cafe-notification-daemon_2.0.0-1_amd64.buildinfo  cafe-notification-daemon_2.0.0-1_amd64.changes  cafe-notification-daemon_2.0.0-1_amd64.deb  configure.ac  deb_packages.tar.xz  debian.tar.xz  index.html  makepot
.tx/: config
2024-01-02-140841-38847-1@94a1890ca599_devel/: index.html  report-06fcd9.html  report-26b8ca.html  report-58edc1.html  report-5a015b.html  report-6275aa.html  report-65b42d.html  report-9252d7.html  report-bc6ec9.html  report-c05e5b.html
2024-01-02-140925-8651-cppcheck@94a1890ca599_devel/: commitmsg  output_94a1890ca599c6a437d75bba1a16c1db30bfa78d
2024-01-02-141234-38847-1@2aa6033ef8a3_devel/: commitmsg  index.html  report-06fcd9.html  report-26b8ca.html  report-58edc1.html  report-5a015b.html  report-6275aa.html  report-65b42d.html  report-9252d7.html  report-bc6ec9.html  report-c05e5b.html
2024-01-02-141316-3043-cppcheck@2aa6033ef8a3_devel/: output_2aa6033ef8a39dfa660cc92f26c5e470db32ffae
2024-01-02-141318-38846-1@190c259d5472_devel/: index.html  output_190c259d5472cb8655cc25e7a715faf9bc866443  report-06fcd9.html  report-26b8ca.html  report-58edc1.html  report-5a015b.html  report-6275aa.html  report-65b42d.html  report-9252d7.html  report-bc6ec9.html  report-c05e5b.html
2024-01-02-141403-8381-cppcheck@190c259d5472_devel/: 4.html
2024-01-02-141415-38847-1@6e9ddc986420_devel/: index.html  report-06fcd9.html  report-26b8ca.html  report-58edc1.html  report-5a015b.html  report-6275aa.html  report-65b42d.html  report-9252d7.html  report-bc6ec9.html  report-c05e5b.html
2024-01-02-141458-8340-cppcheck@6e9ddc986420_devel/: output_6e9ddc9864200c966c3d1cbb4844c781ab256f45  stats.html
2024-01-02-141724-38846-1@9f3cd0fdab4a_devel/: index.html  output_9f3cd0fdab4a1152f7e6879925b44d926c7a72bf  report-06fcd9.html  report-26b8ca.html  report-58edc1.html  report-5a015b.html  report-6275aa.html  report-65b42d.html  report-9252d7.html  report-bc6ec9.html  report-c05e5b.html
2024-01-02-141806-5538-cppcheck@9f3cd0fdab4a_devel/: index.html
2024-01-02-141918-38847-1@9c4a0ea3828e_devel/: index.html  output_9c4a0ea3828e6c6e614b961e857d25737d8083dc  report-06fcd9.html  report-26b8ca.html  report-58edc1.html  report-5a015b.html  report-6275aa.html  report-65b42d.html  report-9252d7.html  report-bc6ec9.html  report-c05e5b.html
2024-01-02-142001-1324-cppcheck@9c4a0ea3828e_devel/: 1.html
2024-01-02-143352-38846-1@bacc0c0a195b_devel/: index.html  report-06fcd9.html  report-26b8ca.html  report-58edc1.html  report-5a015b.html  report-6275aa.html  report-65b42d.html  report-9252d7.html  report-bc6ec9.html  report-c05e5b.html
2024-01-02-143436-2147-cppcheck@bacc0c0a195b_devel/: output_bacc0c0a195b07b4728cbca35de49a9cdbad8cd0
2024-01-02-145355-38847-1@6b554971cd3f_devel/: index.html  report-06fcd9.html  report-26b8ca.html  report-58edc1.html  report-5a015b.html  report-6275aa.html  report-65b42d.html  report-9252d7.html  report-bc6ec9.html  report-c05e5b.html
2024-01-02-145418-38847-1@176c5ed1359c_devel/: index.html  output_176c5ed1359cc5f5b564b449243ccd1b26b90088  report-06fcd9.html  report-26b8ca.html  report-58edc1.html  report-5a015b.html  report-6275aa.html  report-65b42d.html  report-9252d7.html  report-bc6ec9.html  report-c05e5b.html
2024-01-02-145437-8499-cppcheck@6b554971cd3f_devel/: 6.html  output_6b554971cd3f83f8b0089e517863d6cd880c3826
2024-01-02-145453-38847-1@176c5ed1359c_master/: index.html  report-06fcd9.html  report-26b8ca.html  report-58edc1.html  report-5a015b.html  report-6275aa.html  report-65b42d.html  (+3 more)
data/: Makefile.am  org.cafe.NotificationDaemon.gschema.xml.in  org.freedesktop.cafe.Notifications.service.in
src/capplet/: Makefile.am  cafe-notification-properties.1  cafe-notification-properties.c  cafe-notification-properties.desktop.in  cafe-notification-properties.ui  org.cafe.notifications.properties.gresource.xml
src/daemon/: Makefile.am  daemon.c  daemon.h  engines.c  engines.h  mnd-daemon.c  sound.c  sound.h  stack.c  stack.h
(+515 files in other folders)
